# permutations

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
permutations/: permutation.py
tests/: test__permutation.py
tex/: biblio.bib  booksty.sty  chapter01.tex  chapter02.tex  chapter03.tex  main.tex
tex/sidematter/: frontmatter.tex  preface.tex  solutions.tex  ticklist.md
