[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "permutations"
version = "0.0.0"
description = "A mathematics textbook on algebraic permutations."
authors = ["Bilbottom"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group]
dev.optional = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
