[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "permutations"
version = "0.0.0"
description = "A Mathematics textbook on algebraic permutations."
authors = [{name = "Bilbottom"}]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["permutations"]


[tool.pytest.ini_options]
addopts = "--cov=permutations"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    #  Use of `assert` detected
    "PLR2004", #  Magic value used in comparison
    "PLR0913", #  Too many arguments in function definition
]
